hphp/hack/test/typecheck/const_attribute/usage/trait.php.exp
File "trait.php", line 3, characters 1-21:
Interfaces, traits and enums may not be declared __Const (Parsing[1002])
File "trait.php", line 4, characters 7-7:
Cannot use experimental feature: The __Const attribute is not supported. (Other[0000])
File "trait.php", line 4, characters 7-7:
Cannot apply __Const attribute to a trait (NastCheck[3048])
