hphp/hack/test/typecheck/const_attribute/usage/trait.php
<?hh // strict

<<__Const>>
trait Trait {}
